# uavAutoNavigation

./: README.md  auto_laser_nav.sh  compile_ORB_SLAM3.sh  compile_all.sh  compile_mission.sh  compile_planning.sh  compile_simulation.sh  uavAutoNavigation_firmware.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/prometheus_msgs/: ArucoInfo.h  AttitudeReference.h  BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h  ControlCommand.h  ControlOutput.h  DetectionInfo.h  DroneState.h  Formation.h  IndoorSearch.h  LogMessage.h  LogMessageControl.h  LogMessageDetection.h  LogMessagePlanning.h  Message.h  MultiDetectionInfo.h  PositionReference.h  SwarmCommand.h
devel/include/prometheus_plan_manage/: Bspline.h
devel/lib/arc_utilities/: test_arc_utilities  test_hierarchical_clustering
devel/lib/pkgconfig/: arc_utilities.pc  bspline.pc  bspline_opt.pc  path_searching.pc  plan_env.pc  poly_traj.pc  prometheus_cmake_utils.pc  prometheus_control.pc  prometheus_global_planning.pc  prometheus_hybrid_astar.pc  prometheus_local_planning.pc  prometheus_msgs.pc  prometheus_plan_manage.pc  prometheus_planning_sim.pc  prometheus_pose_utils.pc  prometheus_swarm_planning.pc  rviz_plugins.pc  sdf_tools.pc  traj_utils.pc
devel/lib/plan_env/: read_pub_ot
devel/lib/prometheus_control/: OptiTrackTest  TFmini  eigen_test  fake_vicon  filter_tester  px4_geometry_controller  px4_pos_controller  px4_pos_estimator  px4_pos_estimator_with_noise  px4_sender  rover_pos_controller  set_mode  swarm_controller  swarm_estimator  swarm_ground_station  terminal_control  terminal_control_rover
devel/lib/prometheus_plan_manage/: traj_server
devel/lib/prometheus_planning_sim/: uav_sim
devel/lib/sdf_tools/: sdf_generation_node
devel/share/arc_utilities/cmake/: arc_utilitiesConfig.cmake
devel/share/bspline/cmake/: bsplineConfig.cmake
devel/share/bspline_opt/cmake/: bspline_optConfig.cmake
launch/: indoor3_lidar_gmapping.launch
modules/ground_station/src/: ground_station.cpp  ground_station_msg.cpp
simulation/: CMakeLists.txt  package.xml
simulation/launch_basic/: sitl.launch
simulation/launch_planning/: sitl_fast_planning_rgbd.launch
(+196 files in other folders)
